--- a/Practice8_dersten_once.ipynb
+++ b/Practice8_dersten_once.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. basit bir fonk"
+    "#### 1. basit bir fonk"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Tek argumanli/parametreli fonksiyon"
+    "#### 2. Tek argumanli/parametreli fonksiyon"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. return ile geri geri donuslu fonksiyonlar"
+    "#### 3. return ile geri geri donuslu fonksiyonlar"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. coklu argumanli/parametreli fonk"
+    "#### 4. coklu argumanli/parametreli fonk"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Tuple larla ilgili pratik bir bilgi:"
+    "#### 5. Tuple larla ilgili pratik bir bilgi:"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Coklu geri donus yapan fonklar"
+    "#### 6. Coklu geri donus yapan fonklar"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Gecmis bilgileri de katarak bir problem cozelim: \n",
+    "#### 7. Gecmis bilgileri de katarak bir problem cozelim: \n",
     "\n",
     "bu problem icin tweets.csv adli bir veriyi kullanacagiz.  100 tweet ve 31 degisken var ama biz sadece 'lang' degiskeni ile ilginecegiz"
    ]
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Bu yaptigimizi fonksiyona dokelim, fonksiyon yapsin:"
+    "#### 8. Bu yaptigimizi fonksiyona dokelim, fonksiyon yapsin:"
    ]
   },
   {
@@ -336,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. Asagidaki default argumanli bir fonksiyonu tanimlanmistir, eksik yerleri doldurunuz:"
+    "#### 9. Asagidaki default argumanli bir fonksiyonu tanimlanmistir, eksik yerleri doldurunuz:"
    ]
   },
   {
@@ -375,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10. Coklu default argumanlar"
+    "#### 10. Coklu default argumanlar"
    ]
   },
   {
@@ -423,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "11. Bir fonksiyon yazmamiz isteniyor, oyle bir fonksiyon ki, farkli sayida argumanlar da girildigi zaman calissin:"
+    "#### 11. Bir fonksiyon yazmamiz isteniyor, oyle bir fonksiyon ki, farkli sayida argumanlar da girildigi zaman calissin:"
    ]
   },
   {
@@ -460,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "12. Yukaridaki fonk a benzer sekilde sayisini bilemedigimiz girdiler olacak fakat ikili kelimeler halinde gelecek. Bir sozluk yapisindaki key-value cifti gibi."
+    "#### 12. Yukaridaki fonk a benzer sekilde sayisini bilemedigimiz girdiler olacak fakat ikili kelimeler halinde gelecek. Bir sozluk yapisindaki key-value cifti gibi."
    ]
   },
   {
@@ -492,7 +492,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "13. Soru8 deki fonksiyonu alt hucreye kopyalayiniz. Ve ogrendigimiz default argumani bu fonk a uygulayiniz. kolon_adi default olarak 'lang' olsun."
+    "#### 13. Soru8 deki fonksiyonu alt hucreye kopyalayiniz. Ve ogrendigimiz default argumani bu fonk a uygulayiniz. kolon_adi default olarak 'lang' olsun."
    ]
   },
   {
@@ -545,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "14. soru11 de gordugumuz *arg in kullanimi gibi ustteki fonk u buraya kopyalayip editleyiniz. sonuc olarak kac tane kolon  adi girersek, fonk gonderdigimiz kolonlara uygulansin:"
+    "#### 14. soru11 de gordugumuz *arg in kullanimi gibi ustteki fonk u buraya kopyalayip editleyiniz. sonuc olarak kac tane kolon  adi girersek, fonk gonderdigimiz kolonlara uygulansin:"
    ]
   },
   {
@@ -613,7 +613,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "15. verilen bir string ifadeye uc unlem ekleyen fonku lambda ile yaziniz, ve 'hello' kelimesini bu fonk a gonderiniz"
+    "#### 15. verilen bir string ifadeye uc unlem ekleyen fonku lambda ile yaziniz, ve 'hello' kelimesini bu fonk a gonderiniz"
    ]
   },
   {
@@ -633,7 +633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16. Asagidaki fonk u lambda ile yaziniz"
+    "#### 16. Asagidaki fonk u lambda ile yaziniz"
    ]
   },
   {
@@ -681,7 +681,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "17. Asagidaki gibi map ve lambda fonksiyonlarini beraber kullanarak verilen string elemanlara sahip  bir listenin her elemanina uc unlem ekleyiniz"
+    "#### 17. Asagidaki gibi map ve lambda fonksiyonlarini beraber kullanarak verilen string elemanlara sahip  bir listenin her elemanina uc unlem ekleyiniz"
    ]
   },
   {
@@ -723,7 +723,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "18. filter fonk unun lambda ile beraber kullanip asagidaki yonergelere gore verilen bir listenin her elemanina bir filtreleme uygulayiniz"
+    "#### 18. filter fonk unun lambda ile beraber kullanip asagidaki yonergelere gore verilen bir listenin her elemanina bir filtreleme uygulayiniz"
    ]
   },
   {
@@ -765,7 +765,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "19. Daha once tanimladigimiz anlamsizca() fonksiyonunu yonergelere gore reduce ile yapiniz"
+    "#### 19. Daha once tanimladigimiz anlamsizca() fonksiyonunu yonergelere gore reduce ile yapiniz"
    ]
   },
   {
@@ -823,7 +823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "20. "
+    "#### 20. "
    ]
   },
   {
@@ -864,7 +864,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "21. Kendi hata uyarimizi olusturmak"
+    "#### 21. Kendi hata uyarimizi olusturmak"
    ]
   },
   {
@@ -903,7 +903,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "22. "
+    "#### 22. "
    ]
   },
   {
@@ -929,7 +929,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "23. "
+    "#### 23. "
    ]
   },
   {
@@ -981,7 +981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "24. print ile yazdirdigimiz hatayi hata turu olarak yazdiriniz:"
+    "#### 24. print ile yazdirdigimiz hatayi hata turu olarak yazdiriniz:"
    ]
   },
   {
